--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   file_picker: ^3.0.1
-  http: ^0.13.1
   firebase_storage: ^8.0.3
   firebase: ^9.0.1
   cloud_firestore: ^1.0.5
-
+  percent_indicator: ^3.0.1
+  liquid_progress_indicator: ^0.3.2
 
 dev_dependencies:
   flutter_test:
